fix pointerEvent on iOS

--- a/public/assets/css/style1.css
+++ b/public/assets/css/style1.css
@@ -1,4 +1,4 @@
-@charset 'utf-8';
+@charset "utf-8";
 
 @font-face {
   font-family: "UnifrakturCook", serif;
@@ -35,6 +35,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
 }
 
 .menu-item {
@@ -42,6 +43,8 @@ body {
   height: 150px;
   width: 20%;
   cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
 }
 .menu-item + .menu-item {
   margin-left: 30px;
@@ -62,5 +65,9 @@ body {
     margin-top: 2vw;
   }
 
+  .tp-lblv_l {
+    user-select: none;
+    -webkit-user-select: none;
+  }
 
 }
